--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "simple 'to do' app in node",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "'node server.js &' && 'load.sh'"
   },
